NDLに画像が存在しているか判別するAPIを作成
